<resources>
    <string name="app_name">MealNBuffetAdmin</string>
    <string name="menu_item_home">Items</string>
    <string name="menu_add_item">AddItem</string>
    <string name="menu_edit_item">EditItem</string>
    <string name="menu_add_buffet">AddBuffet</string>
    <string name="menu_add_meal">AddMeal</string>
    <string name="menu_edit_buffet">EditBuffet</string>
    <string name="menu_items_list">Items</string>
    <string name="menu_buffets_list">Buffets</string>
    <string name="menu_meal_list">Meals</string>
    <string name="menu_buffet_dashboard">BuffetDashBoard</string>
    <string name="menu_meal_dashboard">MealDashBoard</string>
    <string name="menu_update_details">UpdateDetails</string>
    <string name="menu_report">Report</string>
    <string name="title_update_details">RestaurantDetails</string>
    <string name="error_network">Something went wrong. Check Network Settings and try again</string>
    <string name="title_meal">MealNBuffet</string>

    <string name="item_name">Item Name</string>
    <string name="price">Price</string>
    <string name="desc">Description</string>
    <string name="category">Category</string>
    <string name="custom">Custom</string>
    <string name="title_login">Login</string>
    <string name="user_id">User Id</string>
    <string name="password">Password</string>

    <array name="categories">
        <item name="category1">Category1</item>
        <item name="category2">Category2</item>
        <item name="custom">@string/custom</item>
    </array>

    <array name="food_type">
        <item name="veg">Veg</item>
        <item name="non-veg">NonVeg</item>
    </array>

    <string name="buffet_fooditems_select">Select atleast one Food item to Buffet</string>
    <string name="ok">Ok</string>
    <string name="default_selection_msg">SelectBuffetType</string>
    <string name="breakfast">BreakFast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="allday">AllDay</string>

    <string name="order_pending">Pending</string>
    <string name="buffet_order_accepted">Accepted</string>
    <string name="buffet_order_completed">Completed</string>
    <string name="buffet_order_rejected">Rejected</string>
    <string name="choose_order_status_default">Change Order Status</string>

    <array name="buffet_order_status">
        <item name="default">@string/choose_order_status_default</item>
        <item name="buffet_order_accepted">@string/buffet_order_accepted</item>
        <item name="buffet_order_completed">@string/buffet_order_completed</item>
        <item name="buffet_order_rejected">@string/buffet_order_rejected</item>
    </array>

    <string name="meal_order_inprogress">InProgress</string>
    <string name="meal_order_ready">ReadyToPickUp</string>
    <string name="meal_order_completed">Completed</string>
    <string name="meal_order_rejected">Rejected</string>

    <array name="meal_order_status">
        <item name="default">@string/choose_order_status_default</item>
        <item name="buffet_order_accepted">@string/meal_order_inprogress</item>
        <item name="buffet_order_completed">@string/meal_order_ready</item>
        <item name="buffet_order_rejected">@string/meal_order_completed</item>
        <item name="buffet_order_rejected">@string/meal_order_rejected</item>
    </array>


    <array name="buffet_type">
        <item name="default">SelectBuffetType</item>
        <item name="breakfast">@string/breakfast</item>
        <item name="lunch">@string/lunch</item>
        <item name="dinner">@string/dinner</item>
        <item name="allday">@string/allday</item>
    </array>

    <string name="custom_category">Custom Category Name</string>
    <string name="upload_item_image">Item Image</string>
    <string name="choose_file">Choose File</string>
    <string name="add_item_name_warning">ItemNameEmpty</string>
    <string name="add_item_price_warning">ItemPriceEmpty</string>
    <string name="add_item_desc_warning">AddSomePointsAboutItem</string>
    <string name="item_price">Price: $%.2f</string>
    <string name="publish">Publish</string>
    <string name="unpublish">UnPublish</string>
    <string name="published">Published</string>
    <string name="unpublished">UnPublished</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="deleted_item_successfully">DeletedItemSuccess</string>
    <string name="publish_item_successfully">UpdatedPublishTypeSuccessfully</string>
    <string name="auth_get_user_error">Something went wrong, Check UserId &amp; Password</string>
    <string name="item_added_successfully">Item Added Successfully</string>
    <string name="status">Status:%s</string>
    <string name="start_time">StartTime:</string>
    <string name="end_time">EndTime:</string>
    <string name="adult_price">AdultsPrice:</string>
    <string name="kids_price">KidsPrice:</string>

    <string name="meal_name">MealName</string>
    <string name="meal_comp_msg">Complimentary</string>
    <string name="meal_items_qty">ItemQuantity</string>
    <string name="buffet_name">BuffetName</string>
    <string name="buffet_display_name">DisplayName</string>
    <string name="buffet_desc">Description</string>
    <string name="buffet_starttime">StartTime</string>
    <string name="buffet_endtime">EndTime</string>
    <string name="item_qty">Qty: %d</string>

    <string name="buffet_adult_price">AdultsPrice($)</string>
    <string name="buffet_kids_price">KidsPrice($)</string>
    <string name="btn_move_next">MoveToNextPage</string>
    <string name="empty_field">Input is Empty</string>
    <string name="max_meal">MaxItemsPerMeal %d</string>
    <string name="create_meal">CreateMeal</string>
    <string name="bill_amount">BilledAmount: $%.2f</string>
    <string name="number_adults">Adults:%d</string>
    <string name="number_kids">Kids:%d</string>
    <string name="present_status">Status:%s</string>
    <string name="order_id">OrderId:%s</string>
    <string name="total_num_meal">NoOfMeals:%d</string>
    <string name="meal_id">Meal %d</string>
    <string name="select_status_change">Change the Order Status</string>
    <string name="menu_item_sign_out">SignOut</string>
    <string name="sign_out_dialog_title">Sign Out?</string>
    <string name="sign_out_dialog_msg">Are you sure you want to sign out?</string>
    <string name="sign_out_button">SIGN OUT</string>
    <string name="cancel">CANCEL</string>
    <string name="availability">Availability</string>
    <string name="tax_details">Tax(%) Details</string>
    <string name="tax1">Tax1</string>
    <string name="street">Street &amp; Land Mark</string>
    <string name="city">City</string>
    <string name="zipcode">Zipcode</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="cusinietype">Cuisine Type</string>
    <string name="phone_number">Phone Number</string>
    <string name="updatedetails">UpdateDetails</string>
    <string name="str_state">State</string>
    <string name="orderdashboard">OrderDashBoard</string>
    <string name="time_format">%0</string>
    <string name="order_cut_off_time">Order Cut Off Time</string>

    <string name="cost">$%.2f</string>
    <string name="ordered">Ordered(%s)</string>
    <string name="completed">Completed(%s)</string>
    <string name="other">Other(%s)</string>

    <string name="complete">Complete</string>
    <string name="ready_to_pickUp">ReadyToPickUp</string>
    <string name="inprogress">InProgress</string>
    <string name="str_ordered">Ordered</string>
    <string name="select_report_msg">Select Date To Get Report</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="comission">Comission</string>
    <string name="reset_password">Reset Password</string>
    <string name="provide_userid">Please Provide UserId</string>
    <string name="enter_your_otp">Enter Your OTP</string>
    <string name="title_otpscreen">"OTP Screen"</string>
    <string name="title_reset_password">"Reset Password"</string>
    <string name="passwords_notmatching">Please Check both passwords are not same. Please Re-Enter..</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_new_password">Enter New Password</string>
</resources>
