<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/foodItems_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_view" />

    <RelativeLayout
        android:id="@+id/bottom_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/publish"
            style="@style/body1_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:background="@drawable/button_round"
            android:text="@string/publish"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/unpublish"
            style="@style/body1_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_round"
            android:text="@string/unpublish"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/delete"
            style="@style/body1_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/button_round"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </RelativeLayout>
</RelativeLayout>