<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/additem_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_additem_name"
                style="@style/body1_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/item_name"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_additem_price"
                style="@style/body1_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_additem_desc"
                style="@style/body1_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/desc"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/additem_category_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:prompt="@string/category" />

        <Spinner
            android:id="@+id/additem_foodtype_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:entries="@array/food_type"
            android:prompt="@string/category"
            android:visibility="gone" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tv_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <EditText
                android:id="@+id/et_additem_custom_category"
                style="@style/body1_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/custom_category"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:visibility="visible" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:id="@+id/tv_image"
                style="@style/subheading_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/item_image"
                android:layout_centerVertical="true"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:text="Image"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/image_takeview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/tv_image"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/add_item_image"
                    style="@style/caption_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/common_background"
                    android:padding="10dp"
                    android:text="@string/choose_file"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/item_take_picture"
                    style="@style/caption_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/common_background"
                    android:padding="10dp"
                    android:text="TakePicture"
                    android:textColor="@color/black" />

            </LinearLayout>

            <ImageView
                android:id="@+id/item_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:layout_toRightOf="@+id/image_takeview"
                android:visibility="visible" />

        </RelativeLayout>

        <Button
            android:id="@+id/btn_add_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/additem_view"
            android:layout_margin="20dp"
            android:background="@drawable/button_round"
            android:text="@string/menu_add_item"
            android:textColor="@color/white" />
    </LinearLayout>
</ScrollView>